[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "tankobon"
author = "Ong Yong Xin"
author-email = "ongyongxin2020+github@gmail.com"
home-page = "https://github.com/ongyx/tankobon"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
description-file = "README.md"
requires = [
    "beautifulsoup4>=4.9.1",
    "click>=7.1.2",
    "coloredlogs>=14.0",
    "fake-useragent>=0.1.11",
    "filetype>=1.0.7",
    "requests>=2.24.0",
]
requires-python = ">=3.6"

[tool.flit.metadata.requires-extra]
jsonschema = [
    "jsonschema>=3.2.0",
]
#gui = [
#    "pyglet>=1.5.8",
#    "pyglet-gui>=0.1",
#]
pdf = [
    "fpdf>=1.7.2",
    "imagesize>=1.2.0",
    "natsort>=7.1.0",
]

[tool.flit.scripts]
tankobon = "tankobon.cli:cli"
