[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "tankobon"
author = "Ong Yong Xin"
author-email = "ongyongxin2020+github@gmail.com"
home-page = "https://github.com/ongyx/tankobon"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
description-file = "README.md"
requires = [
    "bbcode>=1.1.0",
    "beautifulsoup4>=4.9.1",
    "click>=7.1.2",
    "coloredlogs>=14.0",
    "filetype>=1.0.7",
    "fpdf>=1.7.2",
    "html5lib>=1.1",
    "imagesize>=1.2.0",
    "MangaDex.py>=2.0.3",
    "natsort>=7.1.0",
    "requests>=2.24.0",
]
requires-python = ">=3.6"

[tool.flit.metadata.requires-extra]
gui = [
    "PySide6>=6.0.3"
]
dev = [
    "pytest",
    "pytest-flake8",
    "pytest-mypy",
    "pydoc-markdown>=3.10.1"
]

[tool.flit.scripts]
tankobon = "tankobon.ui.cli:main"

[tool.pytest.ini_options]
minversion = "6.0"
#addopts = "--flake8 --mypy"
filterwarnings = [
    "ignore::DeprecationWarning"
]
